--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,22 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="TextInputStyleLogin">
+        <item name="android:textColor">@color/primaryTextColor</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColorHint">@color/primaryTextColor</item>
+        <item name="colorControlNormal">@color/primaryTextColor</item>
+        <item name="colorControlActivated">@color/primaryTextColor</item>
+        <item name="colorControlHighlight">@color/primaryTextColor</item>
+    </style>
+
+    <style name="TextInputStyleSignup">
+        <item name="android:textColor">@color/text_color_1</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColorHint">@color/text_color_1</item>
+        <item name="colorControlNormal">@color/text_color_1</item>
+        <item name="colorControlActivated">@color/text_color_1</item>
+        <item name="colorControlHighlight">@color/text_color_1</item>
+    </style>
+
 </resources>
