--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
@@ -19,6 +20,7 @@
         <item
             android:id="@+id/nav_notifications"
             android:icon="@drawable/notification_icon"
+            app:actionLayout="@layout/notification_pop_up"
             android:title="Notificações" />
         <item
             android:id="@+id/nav_config"
