--- a/app/src/main/res/layout/fragment_session.xml
+++ b/app/src/main/res/layout/fragment_session.xml
@@ -25,57 +25,41 @@
     </android.support.v7.widget.RecyclerView>
 
     <LinearLayout
-        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:orientation="horizontal"
-        android:padding="10dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/roll_list">
 
-        <EditText
-            android:id="@+id/number_of_dice"
-            android:layout_width="40dp"
-            android:inputType="number"
-            android:text="1"
-            android:layout_height="wrap_content" />
+        <FrameLayout
+            android:id="@+id/combat_options"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            
 
-        <TextView
-            android:layout_width="40dp"
+        </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="X d "
-            android:textSize="20dp" />
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/dice_faces"
-            android:layout_width="40dp"
-            android:inputType="number"
-            android:text="6"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="+"
-            android:textSize="20dp" />
-
-        <EditText
-            android:id="@+id/bonus"
-            android:layout_width="40dp"
-            android:inputType="number"
-            android:text="0"
-            android:layout_height="wrap_content" />
-
-        <ImageView
-            android:id="@+id/roll_btn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:src="@drawable/ready_btn" />
+            <Button
+                android:id="@+id/attack_button"
+                android:layout_width="80dp"
+                android:layout_height="40dp"
+                android:background="@drawable/bg_button_default"
+                android:text="Ataque" />
+        </LinearLayout>
     </LinearLayout>
+
 
 </android.support.constraint.ConstraintLayout>
