--- a/app/src/main/res/layout/fragment_add_attack.xml
+++ b/app/src/main/res/layout/fragment_add_attack.xml
@@ -101,6 +101,6 @@
         android:src="@drawable/ready_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/attack_name" />
 
 </android.support.constraint.ConstraintLayout>
