--- a/app/src/main/res/layout/fragment_attacks.xml
+++ b/app/src/main/res/layout/fragment_attacks.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/round_white_bg"
+    android:padding="5dp"
+    android:layout_margin="5dp"
     tools:context=".Screens.Session.Attacks.AttacksFragment">
 
     <android.support.v7.widget.RecyclerView
