--- a/app/src/main/res/layout/fragment_players_tab.xml
+++ b/app/src/main/res/layout/fragment_players_tab.xml
@@ -1,7 +1,10 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/AdventureProgressBg"
+    tools:showIn="@layout/fragment_adventure_details"
     android:padding="20dp">
 
     <android.support.v7.widget.RecyclerView
@@ -12,4 +15,4 @@
     </android.support.v7.widget.RecyclerView>
 
 
-</LinearLayout>
+</FrameLayout>
