--- a/app/src/main/res/layout/characters_list_item.xml
+++ b/app/src/main/res/layout/characters_list_item.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:layout_weight="8">
 
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/player_icon"/>
+            app:srcCompat="@drawable/player_icon" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -28,45 +31,27 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:text="TextView"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/text_view_player_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:text="TextView"/>
+                android:text="TextView" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="8dp"
-                android:background="@color/text_color_1"/>
+                android:background="@color/text_color_1" />
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/characters_edit_layout"
-        android:layout_width="75dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|right"
-        android:layout_margin="5dp"
-        android:orientation="horizontal"
-        android:visibility="gone">
-
-        <ImageView
-            android:id="@+id/characters_item_edit"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_gravity="top|left"
-            app:srcCompat="@drawable/edit_field_icon"/>
-
-        <ImageView
-            android:id="@+id/characters_item_trash_can"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_gravity="top|left"
-            android:layout_marginLeft="5dp"
-            app:srcCompat="@drawable/trashcan_icon"/>
-    </LinearLayout>
-</FrameLayout>
+    <ImageView
+        android:id="@+id/add_attack"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/add_player_icon"
+        android:visibility="gone" />
+</LinearLayout>
