--- a/app/src/main/res/layout/fragment_attacks.xml
+++ b/app/src/main/res/layout/fragment_attacks.xml
@@ -7,6 +7,7 @@
     android:background="@drawable/round_white_bg"
     android:padding="5dp"
     android:layout_margin="5dp"
+    android:elevation="10dp"
     tools:context=".Screens.Session.Attacks.AttacksFragment">
 
     <android.support.v7.widget.RecyclerView
