--- a/app/src/main/res/layout/fragment_session.xml
+++ b/app/src/main/res/layout/fragment_session.xml
@@ -10,7 +10,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/roll_list"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
         android:background="@drawable/round_white_bg"
         android:padding="10dp"
         android:layout_marginVertical="70dp"
